<resources>
    <string name="app_name">Trigger Therapist</string>
    <string name="aboutTitle">About</string>
    <string name="create_analysis">Add Analysis</string>
    <string name="moduleTitle">How to Create a Functional Analysis</string>
    <string name="summary">Trigger Therapist is a simple app to help you make lifestyle changes to promote long term abstinence.  Other people like you have been able to quit by following similiar programs.  It is important to start thinking about your drug use. The goal of this treatment program is to help you learn how to stop using and live a drug-free lifestyle. You will get the most benefit from Trigger Therapist the more you use it.  If you use during treament it is important to remember it is not a failure, and it an opportunity to learn more about how to stop using completely.</string>
    <string name="view_analysis">View Previous</string>
    <string name="triggerTitle">What is a trigger?</string>
    <string name="triggerText">A trigger is an event that occurs before a person uses drugs and increases the likelihood of using. Triggers can be: Particular individuals, Environmental settings, A certain feeling, A combination of these. Triggers can be quite obvious or they can be difficult to identify. They should not be thought of as things that make you use, but as things that increase the chance that you will use. Many times, a trigger will lead to other responses, like thoughts about using and the potential consequences of using, such as \'this will make me feel better\' or \'doing it will be lots of fun\' or \'it will help me forget that.\' Almost anything can be a trigger.  </string>
    <string name="triggerTextSecond">These can lead to a variety of thoughts or feelings that encourage drug use:</string>
    <string name="behaviorTitle">What is a behavior?</string>
    <string name="behaviorText">Behaviors are simply anything you do after experiencing a trigger. Drug use is one of several behaviors that could occur after a trigger. Your job is to learn new behaviors so you can either avoid the trigger or refuse to turn to drugs.</string>
    <string name="consequencesNegativeTitle">What are Negative Consequences?</string>
    <string name="consequencesPositiveTitle">What are Positive Consequences?</string>
    <string name="consequencesNegativeText">The negative consequences of drug use are usually experienced some time after using. These are the effects that interfere with life goals and are usually detrimental to relationships, work, finances, health, mood, and self-esteem. It is important to pay attention to these negative consequences when doing your functional analysis.</string>
    <string name="consequencesPositiveText">The positive, reinforcing consequences of drug use are usually experienced soon after taking the drug and vary on the drug used. Some typical positive consequences reported by users are -  Forgetting bad negative events or feelings. Becoming more energetic. Getting rid of depressed feelings. Feeling less pain. Feeling good. An enhanced sexual experience. Because drug use results in many of these short-term, positive consequences, it is hard to stop.</string>
    <string name="howToTitle">About Funtional Analysis</string>
    <string name="howToText">Click the add analysis button on the front page. \n1.) Think of the last time you used your particular drug. Write down your drug use in the box marked Behavior.\n\n2.)Next, try to remember what you were doing just before you started using the drug. Can you remember who you were with, where you were, what you were doing, or what time of day it was? Write these in the Trigger box. \n\n3.) Before using the drug the last time, what were you thinking and feeling? Were you saying anything to yourself? Write whatever thoughts and feelings you remember in the box called Thoughts and Feelings.\n\n4.) Now I list your responses to each of these questions: What happened after you used? What were the effects of using drugs? Did your mood change? Did you feel high? Did you act differently? What were your thoughts and feelings?\n\n 5.) Now make a list of the effects of your drug use over time since you began using drugs. How has it affected your relationships, friendships, work/school, health, self-esteem, and so forth? You will find that the lists you just made include some things that make you feel good and some that make you feel bad. \n\n6.) Write down the good things in the Positive Consequences box and the bad things in the Negative Consequences box.  You will probably notice that most of the positive consequences are events or feelings that occur with cocaine use or soon after, while the negative consequences occur some time after drug use, probably a long time after. This is why drug use becomes such a powerful habit that it is difficult to break.  \n\nCongratulations, you have just functionally analyzed your cocaine use in that situation.</string>
    <string name="save">Save</string>
    <string name="about">About</string>
</resources>
