<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kazanski.com.basic_cbt.ConsequencesExplain">

    <TextView
        android:id="@+id/consequencesNegativeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consequencesNegativeTitle"
        android:layout_alignParentStart="true"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/consequencesNegativeSummaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/consequencesNegativeTitle"
        android:text="@string/consequencesNegativeText"/>

    <TextView
        android:id="@+id/consequencesPositiveTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consequencesPositiveTitle"
        android:layout_below="@+id/consequencesNegativeSummaryText"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/consequencesPostiveSummaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/consequencesPositiveTitle"
        android:text="@string/consequencesPositiveText"/>

</RelativeLayout>
