<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="kazanski.com.basic_cbt.MainActivity">

    <TextView
        android:id="@+id/modulesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moduleTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp"
        android:padding="10dp" />

    <ListView
        android:id="@+id/modulesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modulesTitle"
        android:layout_alignParentStart="true">

    </ListView>

        <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/analysisButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/create_analysis"
            android:onClick="AddAnalysis" />

        <Button
            android:id="@+id/viewAnalysisButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/view_analysis"
            android:onClick="Previous" />

    </LinearLayout>



</RelativeLayout>
